# mefai-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mefai_cli/: __init__.py  api.py  config.py  display.py  main.py
